@@ -1,10 +1,11 @@
 # Created by Jevoom
 #
-# 02-May-2011
-#   Minor changes to Client
+# 17-May-2011
+#   Added a check_key method to JerbilService::Base to hide key checking.
+#   Cleaned up some unnecessary system logging in jerbil.
 
 module Jerbil
-  Version = '0.1.1'
-  Version_Date = '02-May-2011'
-  Ident = 'jerbil-0.1.1 02-May-2011'
+  Version = '0.1.2'
+  Version_Date = '17-May-2011'
+  Ident = 'jerbil-0.1.2 17-May-2011'
 end
