@@ -1,5 +1,10 @@
 ==History
 
+jerbil-0.1.2 17-May-2011
+
+Added a check_key method to JerbilService::Base to hide key checking.
+Cleaned up some unnecessary system logging in jerbil.
+
 jerbil-0.1.1 02-May-2011
 
 Minor changes to Client
